--- a/views/deleteV.ejs
+++ b/views/deleteV.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="/public/style.css" />
+        <link rel="stylesheet" type="text/css" href="/public/layout.css" />
         <title>Accueil</title>
     </head>
  
@@ -16,7 +17,8 @@
             </ul>
         </nav>
         <hr>
-        <form action="/deleteV/<%= nom %>" method="post">
+        <section class="container">
+            <form action="/deleteV/<%= nom %>" method="post" class="row">
             
                 <select name="deleteV">
                     <% todolist.forEach(function(todo) { %>
@@ -25,6 +27,8 @@
                 </select>
                 <input type="submit" value="Valider"/>
             
-        </form>
+            </form>
+        </section>
+        
     </body>
 </html>
