--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,6 +5,7 @@
         <title>Accueil</title>
         <link rel="stylesheet" type="text/css" href="/public/style.css" />
         <link rel="stylesheet" type="text/css" href="/public/pagination.css" />
+        <link rel="stylesheet" type="text/css" href="/public/layout.css" />
         <script type="text/javascript" src="/public/pagination.js"></script>
     </head>
  
@@ -20,34 +21,38 @@
             </ul>
         </nav>
         <hr>
-        <form action="/search" method="post">
+      <section class="container">
+        <form action="/search" method="post" class="row">
           <label for="recherche">Recherche</label> :
           <input type="text" id="recherche" name="recherche">
           <input type="submit" value="Rechercher" id="Rechercher">
         </form>
-      <div>
-        <table>
-          <thead>
-            <tr>
-              <th>plaque</th>
-              <th>heure d'entrée</th>
-              <th>payé</th>
-              <th>type</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% list.docs.forEach(function(vhl) { %>
-            <tr>
-              <td><%= vhl.plaque %></td>
-              <td><script>document.write(dateFr("<%= vhl.dateEntre %>"))</script></td>
-              <td><%= vhl.paye %></td>
-              <td><%= vhl.type %></td>
-            </tr>
-            <% }); %>
-          </tbody>    
-        </table> 
-        <nav id="pagination"></nav> 
-      </div>   
+        <div class="row">
+          <table>
+            <thead>
+              <tr>
+                <th>plaque</th>
+                <th>heure d'entrée</th>
+                <th>payé</th>
+                <th>type</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% list.docs.forEach(function(vhl) { %>
+              <tr>
+                <td><%= vhl.plaque %></td>
+                <td><script>document.write(dateFr("<%= vhl.dateEntre %>"))</script></td>
+                <td><%= vhl.paye %></td>
+                <td><%= vhl.type %></td>
+              </tr>
+              <% }); %>
+            </tbody>    
+          </table> 
+          <nav id="pagination"></nav> 
+        </div>
+      </section>
+        
+         
 
     </body>
 
